Implementing ruletype name and rule type selector in action rules
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40867

--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRAlertRule/Templates/VRAlertRuleGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRAlertRule/Templates/VRAlertRuleGridTemplate.html
@@ -8,6 +8,7 @@
              idfield="Entity.VRAlertRuleId" enableautoexport="true">
     <vr-datagridcolumn headertext="'Id'" field="'Entity.VRAlertRuleId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Rule Type'" field="'RuleTypeName'"></vr-datagridcolumn>
     <vr-datagridexpandablerow>
         <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
     </vr-datagridexpandablerow>
