Adding menuActions to view AlertRule and ExecutedProcess Adding viewVRAlertRule
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40868

--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/AccountBalanceNotification/Templates/AccountBalanceNotificationGridTemplate.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/AccountBalanceNotification/Templates/AccountBalanceNotificationGridTemplate.html
@@ -2,6 +2,7 @@
     <vr-columns width="fullrow">
         <vr-datagrid on-ready="scopeModel.onGridReady"
                      datasource="scopeModel.vrNotifications"
+                     menuactions="scopeModel.menuActions"
                      pagingtype="'PagingOnScroll'"
                      loadmoredata="scopeModel.loadMoreData"
                      idfield="Entity.VRNotificationId"
@@ -12,7 +13,7 @@
             <vr-datagridcolumn headertext="'Created'" field="'Entity.CreationTime'" type="'LongDatetime'" disablesorting="true" fixedwidth="'120'"></vr-datagridcolumn>
             <!--<vr-datagridcolumn headertext="'Description'" field="'Entity.Description'" disablesorting="true" widthfactor="'20'"></vr-datagridcolumn>-->
             <vr-datagridcolumn headertext="'Status'" field="'StatusDescription'" getcolor="scopeModel.getStatusColor" disablesorting="true" fixedwidth="'100'"></vr-datagridcolumn>
-            
+
             <vr-datagridcolumn headertext="'Account Type'" field="'VRNotificationEventPayload.AccountType'" disablesorting="true" ng-show="scopeModel.showAccountTypeColumn"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="scopeModel.accountColumnHeader" field="'VRNotificationEventPayload.BusinessEntityDescription'" disablesorting="true"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Balance'" field="'VRNotificationEventPayload.CurrentBalance'" disablesorting="true" type="'Number'" fixedwidth="'80'" numberprecision="'NormalPrecision'"></vr-datagridcolumn>
