--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Views/RPRoute/RPRouteManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Views/RPRoute/RPRouteManagement.html
@@ -2,6 +2,14 @@
     <vr-form name="formFilter" validationcontext="filterGroupValid">
         <div ng-hide="filterSectionCollapsed" vr-loader="isLoadingFilterData">
             <vr-row removeline>
+                <vr-columns width="fullrow">
+                    <vr-choices-filter selectedindex="selectedFilternIndex">
+                        <vr-choice-filter isselected="basicSelected">Basic</vr-choice-filter>
+                        <vr-choice-filter isselected="advancedSelected">Advanced</vr-choice-filter>
+                    </vr-choices-filter>
+                </vr-columns>
+            </vr-row>
+            <vr-row removeline>
                 <vr-columns colnum="2">
                     <vr-whs-routing-routingdatabase-selector onselectionchanged="onRoutingDatabaseSelectorChange" getroutingproductroutes on-ready="onRoutingDatabaseSelectorReady" isrequired hideremoveicon />
                 </vr-columns>
@@ -11,11 +19,11 @@
                 <vr-columns colnum="2">
                     <vr-textbox label="Number of Options" value="numberOfOptions" isrequired type="number" minvalue="1" decimalprecision="0"></vr-textbox>
                 </vr-columns>
-                <vr-whs-be-salezone-selector ismultipleselection on-ready="onSaleZoneSelectorReady" normal-col-num="2" ></vr-whs-be-salezone-selector>
-                <vr-columns colnum="2">
+                <vr-whs-be-salezone-selector ng-show="advancedSelected" ismultipleselection on-ready="onSaleZoneSelectorReady" normal-col-num="2"></vr-whs-be-salezone-selector>
+                <vr-columns colnum="2" ng-show="advancedSelected">
                     <vr-whs-be-routingproduct-selector ismultipleselection on-ready="onRoutingProductSelectorReady" hideselectedvaluessection />
                 </vr-columns>
-                <vr-whs-routing-routestatus-selector on-ready="onRouteStatusDirectiveReady" normal-col-num="2"></vr-whs-routing-routestatus-selector>
+                <vr-whs-routing-routestatus-selector ng-show="advancedSelected" on-ready="onRouteStatusDirectiveReady" normal-col-num="2"></vr-whs-routing-routestatus-selector>
                 <vr-columns colnum="2">
                     <vr-textbox label="Limit Result To" value="limit" type="number" decimalprecision="0" minvalue="1" isrequired="true"></vr-textbox>
                 </vr-columns>
