--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Notification/Directive/Templates/NotificationTypeSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Notification/Directive/Templates/NotificationTypeSettingsTemplate.html
@@ -16,7 +16,7 @@
                                                       selectedvalues="scopeModel.selectedDataRecordFields"
                                                       onselectitem="scopeModel.onSelectDataRecordTypeField"
                                                       ondeselectitem="scopeModel.onDeselectDataRecordTypeField"
-                                                      ismultipleselection hideremoveicon>
+                                                      ismultipleselection hideselectedvaluessection hideremoveicon>
         </vr-genericdata-datarecordtypefields-selector>
     </vr-columns>
     <vr-columns width="3/4row">
