--- a/Vanrise/Code/Vanrise.DataParser.Web/VR_DataParser/Elements/ParserType/Views/ParserTypeEditor.html
+++ b/Vanrise/Code/Vanrise.DataParser.Web/VR_DataParser/Elements/ParserType/Views/ParserTypeEditor.html
@@ -7,6 +7,9 @@
                         <vr-columns width="1/2row">
                             <vr-textbox value="scopeModel.name" label="Name" isrequired></vr-textbox>
                         </vr-columns>
+                        <vr-columns width="1/2row">
+                            <vr-switch value="scopeModel.useRecordType" label="Use Record Type" ></vr-switch>
+                        </vr-columns>
                     </vr-row>
                 </vr-tab>
                 <vr-tab header="'Settings'">
