--- a/Vanrise/Code/Vanrise.DataParser.Web/VR_DataParser/Elements/HexTLV/Directives/MainExtensions/HexTLV/MainExtensions/TagRecordReader/Templates/TageRecordReaderEditor.html
+++ b/Vanrise/Code/Vanrise.DataParser.Web/VR_DataParser/Elements/HexTLV/Directives/MainExtensions/HexTLV/MainExtensions/TagRecordReader/Templates/TageRecordReaderEditor.html
@@ -7,8 +7,11 @@
                         <vr-columns width="1/3row">
                             <vr-textbox value="scopeModel.tag" label="Tag" isrequired="true"></vr-textbox>
                         </vr-columns>
-                        <vr-columns width="1/3row">
+                        <vr-columns width="1/3row" ng-if="!scopeModel.useRecordType">
                             <vr-textbox value="scopeModel.recordType" label="Record Type" isrequired="true"></vr-textbox>
+                        </vr-columns>
+                        <vr-columns width="1/3row" ng-if="scopeModel.useRecordType">
+                            <vr-genericdata-datarecordtype-selector on-ready="scopeModel.onDataRecordTypeSelectorReady" onselectitem="scopeModel.onDataRecordTypeSelectionChange" label="Record Type" isrequired="true"></vr-genericdata-datarecordtype-selector>
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
