--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Views/VRNotification/VRNotificationLog.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Views/VRNotification/VRNotificationLog.html
@@ -19,9 +19,9 @@
                     <vr-notification-alertlevel-selector on-ready="scopeModel.onVRNotificationAlertlevelSelectorReady" normal-col-num="2"
                                                          isloading="scopeModel.isAlertLevelSelectorLoading" ismultipleselection>
                     </vr-notification-alertlevel-selector>
-                    <vr-columns colnum="2">
+                    <!--<vr-columns colnum="2">
                         <vr-textbox value="scopeModel.description" label="Description"></vr-textbox>
-                    </vr-columns>
+                    </vr-columns>-->
                     <vr-notification-notificationstatus-selector on-ready="scopeModel.onNotificationStatusSelectorReady" normal-col-num="2" ismultipleselection></vr-notification-notificationstatus-selector>
                 </span>
                 <vr-directivewrapper directive="scopeModel.selectedNotificationType.SearchDirective" on-ready="scopeModel.onSearchDirectiveReady"></vr-directivewrapper>
