--- a/Vanrise/Code/Vanrise.Web/Client/CSViews/Home/Index.cshtml
+++ b/Vanrise/Code/Vanrise.Web/Client/CSViews/Home/Index.cshtml
@@ -168,7 +168,7 @@
             <!-- Page Content -->
             <div id="page-content-wrapper">
                 <div class="container-fluid vr-container">
-                    <div class="col-lg-12" ng-view></div>
+                    <div class="col-lg-12" ng-view id="mainNgView"></div>
                 </div>
                 <!-- /#page-content-wrapper -->
             </div>
