--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Views/DataRecordFieldChoice/DataRecordFieldChoiceEditor.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Views/DataRecordFieldChoice/DataRecordFieldChoiceEditor.html
@@ -11,22 +11,8 @@
                 </vr-tab>
                 <vr-tab header="'Settings'">
                     <vr-row>
-                        <vr-columns colnum="3">
-                            <vr-textbox label="ID" value="scopeModel.Id" onvaluechanged="scopeModel.onValueChange" type="number"></vr-textbox>
-                        </vr-columns>
-                        <vr-columns colnum="3">
-                            <vr-textbox label="Value" value="scopeModel.value" onvaluechanged="scopeModel.onValueChange"></vr-textbox>
-                        </vr-columns>
-                        <vr-columns colnum="3" withemptyline>
-                            <vr-button type="Add" data-onclick="scopeModel.addValue" standalone vr-disabled="scopeModel.disableAddButton"></vr-button>
-                        </vr-columns>
-                        <vr-columns width="fullrow">
-                            <vr-validator validate="scopeModel.isValid()">
-                                <vr-datalist maxitemsperrow="6" datasource="scopeModel.values" autoremoveitem="true">
-                                    {{dataItem.Text}}
-                                </vr-datalist>
-                            </vr-validator>
-                        </vr-columns>
+                        <vr-columns colnum="12">
+                            <vr-genericdata-datarecordfieldchoice-choices on-ready="scopeModel.onChoicesGridReady"></vr-genericdata-datarecordfieldchoice-choices></vr-columns>
                     </vr-row>
                 </vr-tab>
             </vr-tabs>
