--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleTypeSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleTypeSettingsTemplate.html
@@ -1,36 +1,57 @@
 ﻿<vr-tab header="'Settings'">
-    <vr-row>
-        <vr-columns width="1/3row">
-            <vr-analytic-dataanalysisdefinition-selector on-ready="scopeModel.onDataAnalysisDefinitionSelectorReady"
-                                                         onselectionchanged="scopeModel.onDataAnalysisDefinitionSelectionChanged"
-                                                         selectedvalues="scopeModel.selectedDataAnalysisDefinition" isrequired="true">
-            </vr-analytic-dataanalysisdefinition-selector>
-        </vr-columns>
-        <vr-columns width="1/3row">
-            <vr-textbox value="scopeModel.rawRecordFilterLabel" type="text" label="Raw Record Filter Label" isrequired="true"></vr-textbox>
-        </vr-columns>
-        <vr-columns width="1/3row" ng-if="scopeModel.selectedDataAnalysisDefinition!=undefined">
-            <vr-span vr-loader="scopeModel.isLoadingSourceDataRecordStorage">
-                <vr-genericdata-datarecordstorage-selector on-ready="scopeModel.onSourceDataRecordStorageSelectorReady" selectedvalues="selectedSourceDataRecordStorages"
-                                                           customlabel="Source Record Storages" ismultipleselection="true" isrequired="true">
-                </vr-genericdata-datarecordstorage-selector>
-            </vr-span>
-        </vr-columns>
-    </vr-row>
-    <vr-row>
-        <vr-columns width="fullrow" ng-if="scopeModel.selectedDataAnalysisDefinition!=undefined" vr-loader="scopeModel.isLoadingGrid">
-            <vr-datagrid on-ready="scopeModel.onDAProfCalcGridReady"
-                         datasource="scopeModel.daProfCalcItemNotifications"
-                         hidegridmenu>
+    <vr-tabs>
+        <vr-tab header="'Definition'">
+            <vr-row>
+                <vr-columns width="1/3row">
+                    <vr-analytic-dataanalysisdefinition-selector on-ready="scopeModel.onDataAnalysisDefinitionSelectorReady"
+                                                                 onselectionchanged="scopeModel.onDataAnalysisDefinitionSelectionChanged"
+                                                                 selectedvalues="scopeModel.selectedDataAnalysisDefinition" isrequired="true">
+                    </vr-analytic-dataanalysisdefinition-selector>
+                </vr-columns>
+                <vr-columns width="1/3row">
+                    <vr-textbox value="scopeModel.rawRecordFilterLabel" type="text" label="Raw Record Filter Label" isrequired="true"></vr-textbox>
+                </vr-columns>
+                <vr-columns width="1/3row" ng-if="scopeModel.selectedDataAnalysisDefinition!=undefined">
+                    <vr-span vr-loader="scopeModel.isLoadingSourceDataRecordStorage">
+                        <vr-genericdata-datarecordstorage-selector on-ready="scopeModel.onSourceDataRecordStorageSelectorReady" selectedvalues="selectedSourceDataRecordStorages"
+                                                                   customlabel="Source Record Storages" ismultipleselection="true" isrequired="true">
+                        </vr-genericdata-datarecordstorage-selector>
+                    </vr-span>
+                </vr-columns>
+            </vr-row>
+            <vr-row>
+                <vr-columns width="fullrow" ng-if="scopeModel.selectedDataAnalysisDefinition!=undefined" vr-loader="scopeModel.isLoadingGrid">
+                    <vr-datagrid on-ready="scopeModel.onDAProfCalcGridReady"
+                                 datasource="scopeModel.daProfCalcItemNotifications"
+                                 hidegridmenu>
 
-                <vr-datagridcolumn headertext="'Analaysis Type'" field="'Name'"></vr-datagridcolumn>
-                <vr-datagridcolumn headertext="'Notification Type'">
-                    <vr-notification-notificationtypesetting-selector on-ready="dataItem.onVRNotificationTypeSettingsSelectorReady"
-                                                                      selectedvalues="dataItem.selectedNotificationType"
-                                                                      isrequired="true" hidelabel haschildcolumns>
-                    </vr-notification-notificationtypesetting-selector>
-                </vr-datagridcolumn>
-            </vr-datagrid>
-        </vr-columns>
-    </vr-row>
+                        <vr-datagridcolumn headertext="'Analaysis Type'" field="'Name'"></vr-datagridcolumn>
+                        <vr-datagridcolumn headertext="'Notification Type'">
+                            <vr-notification-notificationtypesetting-selector on-ready="dataItem.onVRNotificationTypeSettingsSelectorReady"
+                                                                              selectedvalues="dataItem.selectedNotificationType"
+                                                                              isrequired="true" hidelabel haschildcolumns>
+                            </vr-notification-notificationtypesetting-selector>
+                        </vr-datagridcolumn>
+                    </vr-datagrid>
+                </vr-columns>
+            </vr-row>
+        </vr-tab>
+        <vr-tab header="'Security'">
+            <vr-row>
+                <vr-columns width="fullrow">
+                    <vr-section header="View">
+                        <vr-sec-requiredpermission-grid on-ready="scopeModel.onViewRequiredPermissionReady"></vr-sec-requiredpermission-grid>
+                    </vr-section>
+                </vr-columns>
+            </vr-row>
+            <vr-row>
+                <vr-columns width="fullrow">
+                    <vr-section header="Start Instance">
+                        <vr-sec-requiredpermission-grid on-ready="scopeModel.onStartInstanceRequiredPermissionReady"></vr-sec-requiredpermission-grid>
+                    </vr-section>
+                </vr-columns>
+            </vr-row>
+        </vr-tab>
+    </vr-tabs>
+  
 </vr-tab>
