--- a/Retail/Code/Retail.Ringo.Web/Retail_Ringo/Views/RingoTCRReportManagement.html
+++ b/Retail/Code/Retail.Ringo.Web/Retail_Ringo/Views/RingoTCRReportManagement.html
@@ -48,7 +48,7 @@
 
                 <retail-ringo-operator-selector normal-col-num="3" ng-if="scopeModel.selectedTCRReportType.value == 1"
                                                 on-ready="scopeModel.onSingleOperatorSelectorDirectiveReady"
-                                                customlabel="OperatorsSS"
+                                                customlabel="Operators"
                                                 isrequired>
                 </retail-ringo-operator-selector>
 </vr-row>
