--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/AccountPackage/PackageAssignmentEditor.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/AccountPackage/PackageAssignmentEditor.html
@@ -4,8 +4,8 @@
             <vr-tabs>
                 <vr-tab header="'Definition'">
                     <vr-row>
-                        <retail-be-package-selector on-ready="scopeModel.onPackageSelectorReady" 
-                                                    normal-col-num="6" isrequired="true" 
+                        <retail-be-package-selector on-ready="scopeModel.onPackageSelectorReady"
+                                                    normal-col-num="6" isrequired="true" vr-disabled="scopeModel.packageSelectorDisabled"
                                                     hideremoveicon>
                         </retail-be-package-selector>
                     </vr-row>
