fix time format
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40971

--- a/Vanrise/Code/Vanrise.Web/Client/CSViews/Home/Index.cshtml
+++ b/Vanrise/Code/Vanrise.Web/Client/CSViews/Home/Index.cshtml
@@ -117,7 +117,7 @@
                     <div class="clock">
                         <span ng-bind="$root.clock  | date:'EEE dd MMM , yyyy'"></span>
 
-                        <span style="color: #6a6a6a;font-weight:bold" ng-bind="$root.clock  | date:'hh:mm:ss'"> </span>
+                        <span style="color: #6a6a6a;font-weight:bold" ng-bind="$root.clock  | date:'HH:mm:ss'"> </span>
 
                     </div>
 
@@ -156,7 +156,7 @@
 
                             <span ng-bind="$root.clock  | date:'EEE dd MMM , yyyy'"></span>
 
-                            <span style="color: #6a6a6a; font-weight: bold" ng-bind="$root.clock  | date:'hh:mm'"></span>
+                            <span style="color: #6a6a6a; font-weight: bold" ng-bind="$root.clock  | date:'HH:mm'"></span>
 
                         </div>
                     </div>
