--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/GenericLKUP/GenericLKUPEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/GenericLKUP/GenericLKUPEditor.html
@@ -9,13 +9,11 @@
                         </vr-columns>
                     </vr-row>
                     <vr-row>
-                        <vr-columns width="1/2row">
-                            <vr-genericdata-businessentitydefinition-selector on-ready="scopeModel.onBusinessEntityDefinitionSelectorReady"
-                                                                              isrequired="true"
-                                                                              customlabel="Generic LKUP"
-                                                                              onselectionchanged="scopeModel.loadExtendedSettingsRuntimeEditor">
-                            </vr-genericdata-businessentitydefinition-selector>
-                        </vr-columns>
+                        <vr-common-genericlkupdefinition-selector on-ready="scopeModel.onGenericLKUPDefinitionSelectorReady"
+                                                                  isrequired="true"
+                                                                  normal-col-num="6"
+                                                                  onselectionchanged="scopeModel.loadExtendedSettingsRuntimeEditor">
+                        </vr-common-genericlkupdefinition-selector>
                     </vr-row>
                 </vr-tab>
                 <vr-directivewrapper vr-loader="scopeModel.isLoadingDirective"
