--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/GenericLKUP/GenericLKUPManagement.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/GenericLKUP/GenericLKUPManagement.html
@@ -5,11 +5,10 @@
                 <vr-columns width="normal">
                     <vr-textbox label="Name" value="name"></vr-textbox>
                 </vr-columns>
-                <vr-columns width="normal">
-                    <vr-genericdata-businessentitydefinition-selector customlabel="Generic LKUP" on-ready="onBusinessEntityDefinitionSelectorReady" ismultipleselection>
-                    </vr-genericdata-businessentitydefinition-selector>
-                </vr-columns>
-
+                <vr-common-genericlkupdefinition-selector on-ready="onGenericLKUPDefinitionSelectorReady"
+                                                          normal-col-num="2"
+                                                          ismultipleselection>
+                </vr-common-genericlkupdefinition-selector>
             </vr-row>
         </div>
         <vr-row removeline>
