--- a/Retail/Code/Retail.Ringo.Web/Retail_Ringo/Views/RingoTCRReportManagement.html
+++ b/Retail/Code/Retail.Ringo.Web/Retail_Ringo/Views/RingoTCRReportManagement.html
@@ -49,7 +49,7 @@
                 <retail-ringo-operator-selector normal-col-num="3" ng-show="scopeModel.selectedTCRReportType.value == 1"
                                                 on-ready="scopeModel.onSingleOperatorSelectorDirectiveReady"
                                                 customlabel="Operators"
-                                                isrequired="true">
+                                                isrequired="scopeModel.selectedTCRReportType.value == 1">
                 </retail-ringo-operator-selector>
 </vr-row>
         </div>
