--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/ZoneInfo.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Views/ZoneInfo.html
@@ -3,18 +3,16 @@
         <vr-form name="formZoneInfo">
             <vr-row>
                 <vr-columns width="fullrow">
-                    <vr-section header="{{scopeModel.sectionHeader}}">
-                        <vr-row>
-                            <vr-columns width="1/2row">
-                                <vr-label mediumsize>BED:</vr-label>
-                                <vr-label isvalue="true" mediumsize>{{scopeModel.zoneBED}}</vr-label>
-                            </vr-columns>
-                            <vr-columns width="1/2row" ng-show="scopeModel.zoneEED != undefined">
-                                <vr-label mediumsize>EED:</vr-label>
-                                <vr-label isvalue="true" mediumsize>{{scopeModel.zoneEED}}</vr-label>
-                            </vr-columns>
-                        </vr-row>
-                    </vr-section>
+                    <vr-label mediumsize>Zone Name:</vr-label>
+                    <vr-label isvalue="true" mediumsize>{{scopeModel.zoneName}}</vr-label>
+                </vr-columns>
+                <vr-columns width="fullrow">
+                    <vr-label mediumsize>Zone BED:</vr-label>
+                    <vr-label isvalue="true" mediumsize>{{scopeModel.zoneBED}}</vr-label>
+                </vr-columns>
+                <vr-columns width="fullrow" ng-show="scopeModel.zoneEED != undefined">
+                    <vr-label mediumsize>Zone EED:</vr-label>
+                    <vr-label isvalue="true" mediumsize>{{scopeModel.zoneEED}}</vr-label>
                 </vr-columns>
             </vr-row>
             <vr-directivetabs tabitems="scopeModel.directiveTabs"></vr-directivetabs>
