--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Views/GenericAnalytic/Definition/DataRecordSourceEditor.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Views/GenericAnalytic/Definition/DataRecordSourceEditor.html
@@ -20,7 +20,7 @@
                 <vr-columns width="1/4row" vr-loader="isRecordStorageLoading">
                     <vr-label>Data Storage Records</vr-label>
                     <vr-genericdata-datarecordstorage-selector on-ready="onDataRecordStorageSelectorReady" selectedvalues="selectedDataRecordStorages"
-                                                               isrequired="true" ismultipleselection="false" usevalidator hidelable>
+                                                               isrequired="true" ismultipleselection usevalidator hidelable>
                     </vr-genericdata-datarecordstorage-selector>
                 </vr-columns>
             </vr-row>
