--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
@@ -89,7 +89,7 @@
                                        disablesorting="true">
                     </vr-datagridcolumn>
 
-                    <vr-datagridcolumn headertext="'TQI'" type="'Text'" widthfactor="7" disablesorting="true">
+                    <vr-datagridcolumn headertext="'TQI'" type="'Text'" fixedwidth="21" disablesorting="true">
                         <span vr-disabled="viewScope.scopeModel.isPreview">
                             <span ng-click="viewScope.onTQIClicked(dataItem)" style="cursor: pointer; text-decoration: underline">...</span>
                         </span>
