--- a/BusinessProcess/Code/Vanrise.Reprocess.Web/Reprocess/Views/ReprocessDefinition/ReprocessDefinitionEditor.html
+++ b/BusinessProcess/Code/Vanrise.Reprocess.Web/Reprocess/Views/ReprocessDefinition/ReprocessDefinitionEditor.html
@@ -25,6 +25,9 @@
                     <vr-columns width="1/2row" vr-loader="scopeModel.isLoadingExecutionFlowStages">
                         <vr-queueing-executionflow-stage-selector customlabel="Initial Stages" on-ready="scopeModel.onExecutionFlowStageSelectorReady" isrequired="true" ismultipleselection></vr-queueing-executionflow-stage-selector>
                     </vr-columns>
+                    <vr-columns width="1/2row">
+                        <vr-textbox value="scopeModel.recordCountPerTransaction" label="Record Count Per Transaction" type="number" decimalprecision="0" minvalue="1" isrequired></vr-textbox>
+                    </vr-columns>
                 </vr-row>
             </vr-section>
 
