convert Rate Change to fixedwidth "18"
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C41007

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
@@ -107,7 +107,7 @@
                         </span>
                     </vr-datagridcolumn>
 
-                    <vr-datagridcolumn isfielddynamic="true" widthfactor="3">
+                    <vr-datagridcolumn isfielddynamic="true" fixedwidth="18">
                         <div style="text-align: left">
                             <span class="{{'glyphicon ' + dataItem.RateChangeTypeIcon}}" title="{{dataItem.RateChangeTypeIconTooltip}}" />
                         </div>
